tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_duplicate_h_codegen@llvm21.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call i64 @_hl.__tk2_helios_h.6(i64 %0), !dbg !8
  %2 = call i64 @_hl.__tk2_helios_h.17(i64 %1), !dbg !9
  ret i64 %2
}

define internal i64 @_hl.__tk2_helios_h.6(i64 %0) !dbg !10 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___rxy(i64 %0, double 0x3FF921FB54442D18, double 0xBFF921FB54442D18), !dbg !11
  call void @___rz(i64 %0, double 0x400921FB54442D18), !dbg !12
  ret i64 %0
}

define internal i64 @_hl.__tk2_helios_h.17(i64 %0) !dbg !13 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___rxy(i64 %0, double 0x3FF921FB54442D18, double 0xBFF921FB54442D18), !dbg !14
  call void @___rz(i64 %0, double 0x400921FB54442D18), !dbg !15
  ret i64 %0
}

declare void @___rxy(i64, double, double)

declare void @___rz(i64, double)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/rhvZsHeDgUnyeIVwAutKJHaZEPSZwPX")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
!9 = !DILocation(line: 5388, column: 404, scope: !3)
!10 = distinct !DISubprogram(name: "_hl.__tk2_helios_h.6", linkageName: "_hl.__tk2_helios_h.6", scope: null, file: !4, line: 23594, type: !5, scopeLine: 23595, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!11 = !DILocation(line: 23807, column: 508, scope: !10)
!12 = !DILocation(line: 6962, column: 212, scope: !10)
!13 = distinct !DISubprogram(name: "_hl.__tk2_helios_h.17", linkageName: "_hl.__tk2_helios_h.17", scope: null, file: !4, line: 1712, type: !5, scopeLine: 1713, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!14 = !DILocation(line: 21129, column: 412, scope: !13)
!15 = !DILocation(line: 4112, column: 51, scope: !13)
