tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_duplicate_h_codegen@pre-mem2reg@llvm21.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %1 = call i64 @_hl.__tk2_helios_h.6(i64 %"2_01"), !dbg !8
  store i64 %1, ptr %"4_0", align 4, !dbg !8
  %"4_02" = load i64, ptr %"4_0", align 4
  %2 = call i64 @_hl.__tk2_helios_h.17(i64 %"4_02"), !dbg !9
  store i64 %2, ptr %"5_0", align 4, !dbg !9
  %"5_03" = load i64, ptr %"5_0", align 4
  store i64 %"5_03", ptr %"0", align 4
  %"04" = load i64, ptr %"0", align 4
  ret i64 %"04"
}

define internal i64 @_hl.__tk2_helios_h.6(i64 %0) !dbg !10 {
alloca_block:
  %"0" = alloca i64, align 8
  %"14_0" = alloca double, align 8
  %"12_0" = alloca double, align 8
  %"10_0" = alloca double, align 8
  %"7_0" = alloca i64, align 8
  %"15_0" = alloca i64, align 8
  %"16_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double 0xBFF921FB54442D18, ptr %"14_0", align 8
  store double 0x3FF921FB54442D18, ptr %"12_0", align 8
  store double 0x400921FB54442D18, ptr %"10_0", align 8
  store i64 %0, ptr %"7_0", align 4
  %"7_01" = load i64, ptr %"7_0", align 4
  %"12_02" = load double, ptr %"12_0", align 8
  %"14_03" = load double, ptr %"14_0", align 8
  call void @___rxy(i64 %"7_01", double %"12_02", double %"14_03"), !dbg !11
  store i64 %"7_01", ptr %"15_0", align 4, !dbg !11
  %"15_04" = load i64, ptr %"15_0", align 4
  %"10_05" = load double, ptr %"10_0", align 8
  call void @___rz(i64 %"15_04", double %"10_05"), !dbg !12
  store i64 %"15_04", ptr %"16_0", align 4, !dbg !12
  %"16_06" = load i64, ptr %"16_0", align 4
  store i64 %"16_06", ptr %"0", align 4
  %"07" = load i64, ptr %"0", align 4
  ret i64 %"07"
}

define internal i64 @_hl.__tk2_helios_h.17(i64 %0) !dbg !13 {
alloca_block:
  %"0" = alloca i64, align 8
  %"25_0" = alloca double, align 8
  %"23_0" = alloca double, align 8
  %"21_0" = alloca double, align 8
  %"18_0" = alloca i64, align 8
  %"26_0" = alloca i64, align 8
  %"27_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double 0xBFF921FB54442D18, ptr %"25_0", align 8
  store double 0x3FF921FB54442D18, ptr %"23_0", align 8
  store double 0x400921FB54442D18, ptr %"21_0", align 8
  store i64 %0, ptr %"18_0", align 4
  %"18_01" = load i64, ptr %"18_0", align 4
  %"23_02" = load double, ptr %"23_0", align 8
  %"25_03" = load double, ptr %"25_0", align 8
  call void @___rxy(i64 %"18_01", double %"23_02", double %"25_03"), !dbg !14
  store i64 %"18_01", ptr %"26_0", align 4, !dbg !14
  %"26_04" = load i64, ptr %"26_0", align 4
  %"21_05" = load double, ptr %"21_0", align 8
  call void @___rz(i64 %"26_04", double %"21_05"), !dbg !15
  store i64 %"26_04", ptr %"27_0", align 4, !dbg !15
  %"27_06" = load i64, ptr %"27_0", align 4
  store i64 %"27_06", ptr %"0", align 4
  %"07" = load i64, ptr %"0", align 4
  ret i64 %"07"
}

declare void @___rxy(i64, double, double)

declare void @___rz(i64, double)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/rhvZsHeDgUnyeIVwAutKJHaZEPSZwPX")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
!9 = !DILocation(line: 5388, column: 404, scope: !3)
!10 = distinct !DISubprogram(name: "_hl.__tk2_helios_h.6", linkageName: "_hl.__tk2_helios_h.6", scope: null, file: !4, line: 23594, type: !5, scopeLine: 23595, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!11 = !DILocation(line: 23807, column: 508, scope: !10)
!12 = !DILocation(line: 6962, column: 212, scope: !10)
!13 = distinct !DISubprogram(name: "_hl.__tk2_helios_h.17", linkageName: "_hl.__tk2_helios_h.17", scope: null, file: !4, line: 1712, type: !5, scopeLine: 1713, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!14 = !DILocation(line: 21129, column: 412, scope: !13)
!15 = !DILocation(line: 4112, column: 51, scope: !13)
