tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_helios_codegen@llvm21_2.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i64, i64 } @_hl.main.1(i64 %0, i64 %1, double %2) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___rzz(i64 %0, i64 %1, double %2), !dbg !11
  %mrv = insertvalue { i64, i64 } poison, i64 %0, 0
  %mrv8 = insertvalue { i64, i64 } %mrv, i64 %1, 1
  ret { i64, i64 } %mrv8
}

declare void @___rzz(i64, i64, double)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9, !10}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, i64 }", file: !2, size: 128, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
